Closed Bug 1718497 Opened 5 years ago Closed 5 years ago

Minimize / maximize / close buttons are not visible with Alpenglow theme with WebRender(Software D3D11) on Window7

Categories

(Core :: Graphics: WebRender, defect)

defect

Tracking

()

RESOLVED FIXED
91 Branch
Tracking Status
firefox91 --- fixed

People

(Reporter: sotaro, Assigned: sotaro)

References

(Blocks 1 open bug)

Details

Attachments

(2 files)

Created from a user post on the desktop development channel.

Attached image No buttons.png

It looks similar to Bug 1636683.

See Also: → 1636683

WebRender(Software D3D11) could be enabled with pref gfx.webrender.software=true and pref gfx.webrender.software.d3d11=true.

Blocks: wr-win7

With WebRender(Software), the problem did not happen. Since it copy BGRA data instead of blit data when tile is opaque.
https://searchfox.org/mozilla-central/rev/ed5c7b4262d4e30656886a45321cbbf4200de349/gfx/wr/swgl/src/composite.h#442

Assignee: nobody → sotaro.ikeda.g
Pushed by sikeda.birchill@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/827ee33b9a37 Copy opaque tile instead of premultiplied blending r=lsalzman
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 91 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: